# MADE-GEO

./: pyproject.toml
data/: capital_regions.csv  pharmacy.csv
notebooks/: HW2.ipynb
