[tool.poetry]
name = "geo-data"
version = "0.1.0"
description = ""
authors = ["Aleksandr Salynskii <alimantu@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
pandas = "^1.1.3"
gdal = { path = "./libs/GDAL-3.1.3-cp37-cp37m-win_amd64.whl" }
fiona = { path = "./libs/Fiona-1.8.17-cp37-cp37m-win_amd64.whl" }
geopandas = "^0.8.1"
matplotlib = "^3.3.2"
mapclassify = "^2.3.0"
descartes = "^1.1.0"
OSMPythonTools = "^0.2.9"
osmapi = "^1.3.0"
geopy = "^2.0.0"
folium = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
